2007-11-13 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/ipc/bits.c and base/include/rtai_bits.h: changed return type 
	  from "int" to "unsigned long" in rt_bits_reset, is 64 bits safer.

2007-11-13 Bernd Suessmilch <Bernd.Suessmilch@uibk.ac.at>

	* base/ipc/bits.c: return the latest mask always.

2007-11-03 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/sched/sched.c: made RTAI own real time signals a native 
	  service; reinstalled task signals at context switch using 
	  RTAI signals simmetrically in kernel/user space, while 
	  maintaining compatibility with the old kernel space only method.
	* base/sched/signal.c: modified as neede to be native RTAI services.
	* base/include/rtai_lxrt.h: defined signals syscalls numbers as part i
	  of the basic RTAI services.
	* base/include/rtai_signal.h: use new signals syscalls numbers, part 
	  of the basic RTAI services now.
	* base/include/rtai_mq.h, rtai_pmq.h: changed named of signals related 
	  syscalls names.

2007-11-02 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_posix.h: reworked a few lines, to impose L1 
	  cache alignment to the task allocation in kernel pthread_create.

2007-11-01 Bernd Suessmilch <Bernd.Suessmilch@uibk.ac.at>

	* base/ipc/bits.c: ensure the correct value is returned when a task
	  is blocked in any of the bits_wait.

2007-10-30 Pierangelo Masarati <masarati@aero.polimi.it>

	* /base/arch/i386/calibration/smi-module.c: fix module naming.
	* /base/arch/i386/calibration/setsmi: set hal_smi_masked_bits during
	   set/reset.

2007-10-28 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/rtai_lxrt.h: start/stop_rt_timer care of being done 
	  in soft mode.

2007-10-21 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-x86_64/rtai_hal-h: upgrades for using latest kernel 
	  patching.
	* base/arche/x86_64/hal/hal.immed: upgrades for using latest kernel 
	  patching.

2007-10-19 Paolo Mantegazza <mantegazza@aero.polimi.it>
